--- a/website.css
+++ b/website.css
@@ -1,9 +1,17 @@
 body{
-    background-color: black;
+    background-color: lightgray;
     color: white;
-    margin: auto;
+    margin: 0;
     padding: 0%;
-width: 1366px;
+/* width: 100%; */
+}
+.container{
+  position: relative;
+  background-color: blue;
+  /* background-color: black; */
+  height: 150vh;
+
+
 }
 a{
     text-decoration: none;
@@ -13,15 +21,41 @@ a:hover{
     text-decoration: none;
     color: blue;
 }
+/* .landing{
+
+    margin: 50px auto;
+border: 5px white dashed;
+
+width: calc(100% - 10px);
+max-width: 1200px;
+height: 56.25vw;
+}
+.landing video {
+    width: auto;
+    max-width: 1200px;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+} */
 .landing{
     position: relative;
-    left: 0px;
-    top: 1200px;
-    z-index: 5;
-border: 5px white dashed;
-align-items: center;
-justify-content: center;
+    margin: 50px auto;
+    border: 5px white dashed;
+    width: calc(100% - 10px);
+    max-width: 1200px;
+    height: calc(100vw * 0.5625);
+    max-height: 675px;
+    overflow: hidden;
 }
+.landing video{
+    position: absolute;
+    /* z-index: -1; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
 .title{
     font-size: 200px;
@@ -94,11 +128,12 @@ text-decoration: none;
 .parent { 
     display: grid; 
     grid-template-columns: repeat(5, 1fr); 
-    grid-template-rows: repeat(9, 1fr); 
+    grid-template-rows: repeat(8, 1fr); 
     grid-column-gap: 0px;
     grid-row-gap: 0px; 
-    margin-top: 1400px;
-    border-bottom: white dashed 2px;
+    /* margin-top: 1400px; */
+    /* border-bottom: white dashed 2px; */
+    justify-items: center;
     }
     /* .div1 { grid-area: 1 / 1 / 2 / 2; } 
     .div2 { grid-area: 1 / 2 / 2 / 3; } 
@@ -222,7 +257,7 @@ top: 300px;
     width: 605px;
     background-color:none;
     border-radius: 50%;
-    border-color: blue;
+    border-color: black;
     border-width: 5px;
     border-style: dashed;
 
@@ -235,7 +270,7 @@ top: 180px;
     width: 500px;
     background-color:none;
     border-radius: 50%;
-    border-color: blue;
+    border-color: black;
     border-width: 5px;
     border-style: dashed;
 
@@ -250,7 +285,7 @@ top: 300px;
     transform: rotate(60deg);
     background-color:none;
     border-radius: 50%;
-    border-color: blue;
+    border-color: black;
     border-width: 5px;
     border-style: dashed;
  
@@ -261,10 +296,17 @@ top: 300px;
 }
 
 .footer{
-    position: absolute;
+    /* position: absolute; */
+    margin: 100px auto;
+    margin-bottom: 10px;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10px;
     /* border-top: white dashed 2px; */
- top: 5220px;
- left: 540px;
+ /* top: 5220px;
+ left: 540px; */
+}
+.line{
+    border-top: 2px white dashed;
+    margin-bottom: 30px;
 }
